<resources>
    <string name="app_name">Pentax Gallery</string>
    <string name="intro_message">"         <![CDATA[                                   An image gallery for Pentax cameras with WiFi capability.                               ]]>     "</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="sync_images">Sync Images</string>
    <string name="pictures_loaded">%d pictures loaded from %s.</string>
    <string name="download">Download</string>
    <string name="download_jpgs">Download JPGs</string>
    <string name="find_in_gallery">Open in Gallery</string>
    <string name="not_found_in_gallery">%s not found in gallery</string>
    <string name="cancel_download">Cancel download</string>
    <string name="download_now">Download now</string>
    <string name="view_all">View All</string>
    <string name="in_download_queue">In download queue…</string>
    <string name="downloading">Downloading…</string>
    <string name="share">Share</string>
    <string name="share_in">Share in…</string>
    <string name="download_again">Download again</string>
    <string name="picture_number">Picture name</string>
    <string name="settings">Settings</string>
    <string name="process_downloads">Process Downloads</string>
    <string name="info">Info</string>
    <string name="downloads_filter">Downloads filter</string>
    <string name="downloaded">Downloaded</string>
    <string name="in_queue">In Queue</string>
    <string name="clear_selection">Clear selection</string>
    <string name="added_to_download_queue">%d images added to download queue</string>
    <string name="select_all">Select All</string>
    <string name="select_non_downloaded">Select non-downloaded</string>
    <string name="flag">Flag</string>
    <string name="flagged">Flagged</string>
    <string name="download_notification_channel_name">Notifications</string>
    <string name="download_notification_channel_desc">Notifications</string>
    <string name="download_notification_title">Transferring pictures</string>
    <string name="donwload_done_notification_title">All pictures transferred</string>
    <string name="download_done_notification_title">Transfer done.</string>
    <string name="download_done_notification_text">%d images transferred</string>
    <string name="download_done_with_fails_notification_text">%d images transferred. %d images failed</string>
    <string name="download_done_failed_notification_text">%d images failed to transfer</string>
    <string name="no_new_images_to_transfer">No new images to transfer.</string>
    <string name="connected_to">Connected to %s (%s)</string>
    <string name="raw_only">RAW only</string>
    <string name="jpg_only">JPG only</string>
    <string name="flagged_images">Flagged images</string>
    <string name="cancel_all_transfers">Cancel all transfers</string>
    <string name="shutdown_camera_when_done">Shutdown when done</string>
    <string name="all_pictures_transferred">All pictures transferred</string>
    <string name="no_pictures_transferred">No pictures transferred</string>
    <string name="no_flagged_pictures">No flagged pictures</string>
    <string name="no_raw_pictures">No RAW pictures</string>
    <string name="no_jpg_pictures">No JPG pictures</string>
    <string name="no_pictures_in_camera">No pictures in camera</string>
    <string name="connecting">Connecting…</string>
    <string name="loading_picture_list">Loading picture list…</string>
    <string name="connecting_to">Trying to connect to %s…</string>
    <string name="loading_local_data">Loading local data…</string>
    <string name="connection_error">Connection error</string>
    <string name="camera_not_connected"><![CDATA[<center><br/><p><b>Camera not connected.</b></p></center>]]></string>
    <string name="wifi_settings">WiFi Settings</string>
    <string name="setting_title">Settings</string>
    <string name="album_name_label">Album Name</string>
    <string name="raw_album_name_label">Album Name (RAW)</string>
    <string name="auto_download_jpgs_label">Auto download JPGs</string>
    <string name="basic">Basic</string>
    <string name="advanced">Advanced</string>
    <string name="auto_download_raw_label">Auto Download RAWs</string>
    <string name="basic_camera_settings">Basic camera settings</string>
    <string name="advanced_camera_settings">Advanced and experimental camera settings</string>
    <string name="thread_number">Thread number</string>
    <string name="read_timeout">Read timeout</string>
    <string name="connect_timeout">Connect timeout</string>
    <string name="remove_camera_label">Remove camera</string>
    <string name="auto_download_raw_summary">Automatically download RAW pictures from camera. (Not recommended)</string>
    <string name="auto_download_jpgs_summary">Automatically download JPG pictures from camera.</string>
    <string name="shutdown_camera_after_transfer_label">Shutdown camera after transfer</string>
    <string name="shutdown_camera_after_transfer_summary">Shutdown camera when picture transfer done</string>
    <string name="remove_camera_confirmation">Do you really want to remove %s?</string>
    <string name="remove_old_image_data_confirmation">Do you really want to remove old images of %s?</string>
    <string name="cameras">Cameras</string>
    <string name="loading_camera_list">Loading camera list…</string>
    <string name="about_label">About…</string>
    <string name="remove_old_images_label">Remove old image data</string>
    <string name="power_off">Power Off</string>
    <string name="main_action_label">Main button action</string>
    <string name="download_canceled">\"Download canceled: \"</string>
    <string name="too_many_errors">Too many errors.</string>
    <string name="location_service_notification_content">(%1$d) ~ %2$dM(%3$s)</string>
    <string name="enable_location_service_label">Enable Location Service</string>
    <string name="enable_location_service_summary">Enable location service to store the location where the pictures were taken.</string>
    <string name="location_service_label">Location Service</string>
    <string name="store_location_in_camera_label">Store Location in Camera</string>
    <string name="store_location_in_camera_summary">If the camera supports it and it is connected store the obtained location in the camera itself.</string>
    <string name="location_update_interval_label">Location Update Interval</string>
    <string name="update_picture_location_information_label">Update Picture Location Information</string>
    <string name="update_picture_location_information_summary">When downloading pictures from the camera, update the location information if available.</string>
    <string name="downloaded_images_location_label">Store Images In</string>
    <string name="sync_camera_time_label">Synchronize</string>
    <string name="sync_camera_time_summary">Set camera time to the same time in the phone</string>
    <string name="camera_not_in_capture_dialog_title">Camera not in capture mode</string>
    <string name="camera_not_in_capture_dialog_message">To sync the camera date time it must be in capture mode. Please set the camera to capture mode and try again.</string>
    <string name="set_to_capture_mode">Set to capture mode</string>
    <string name="sync_camera_time_success_message">Camera time updated.</string>
    <string name="sync_camera_time_fail_message">Failed to set camera time</string>
    <string name="camera_date_label">Camera Time</string>
    <string name="auto_sync_camera_time_label">Automatically synchronize</string>
    <string name="auto_sync_camera_time_sumarry">Set camera time to the same time in the phone automatically every time the phone connects to the camera</string>
    <string name="camera_not_connected_label">Camera not connected.</string>
    <string name="auto_shutdown_poweroff_transfer_label">Shutdown when Ïmage Transfer while Off\" is enabled</string>
    <string name="stop_label">Stop</string>
    <string name="updating_location_label">Waiting for location fix</string>
    <string name="updating_location_manual_label">Waiting for manual update</string>
    <string name="grand_location_permission_label">Please grant location permission to Pentax Gallery</string>
    <string name="grand_external_storage_permission_label">Please grant write external storage permission to Pentax Gallery</string>
    <string name="update_now_label">Update now</string>
    <string name="enable_location_service_at_boot_label">Start location service at boot</string>
    <string name="enable_location_service_at_boot_summary">Start location service (if enabled) at boot time</string>
    <string name="live_view">Live View</string>
    <string name="power_of_camera">Power Of Camera</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="image_capture_failed">Image Capture Failed</string>
    <string name="error_capturing_image">Error capturing image. Is the storage full?</string>
    <string name="number_selected">%d SELECTED</string>
    <string name="download_queue_subtitle">DOWNLOAD QUEUE (%d)</string>
    <string name="queue_downloaded_subtitle">%s (%d/%s) - Downloaded</string>
    <string-array name="auto_shutdown_poweroff_transfer_options">
        <item>Never</item>
        <item>After 1 second</item>
        <item>After 3 seconds</item>
        <item>After 10 seconds</item>
        <item>After 30 seconds</item>
        <item>After 1 minute</item>
        <item>After 2 minutes</item>
        <item>After 3 minutes</item>
        <item>After 5 minutes</item>
    </string-array>
    <string-array name="auto_shutdown_poweroff_transfer_values">
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
    </string-array>
    <string-array name="main_action_options">
        <item>None</item>
        <item>Download JPGs</item>
        <item>Camera</item>
    </string-array>
    <string-array name="main_action_options_values">
        <item>NONE</item>
        <item>DOWNLOAD</item>
        <item>CAMERA</item>
    </string-array>
    <string-array name="update_location_interval_options">
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>I will do it manually</item>
    </string-array>
    <string-array name="update_location_interval_options_values">
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>240</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
        <item>1200</item>
        <item>1500</item>
        <item>1800</item>
        <item>2700</item>
        <item>3600</item>
        <item>0</item>
    </string-array>
    <string-array name="start_parallel_download_percentage_values">
        <item>0</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>95</item>
        <item>99</item>
    </string-array>
    <string-array name="start_parallel_download_percentage_options">
        <item>No Parallel Downloads</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>75%</item>
        <item>80%</item>
        <item>85%</item>
        <item>90%</item>
        <item>95%</item>
        <item>99%</item>
    </string-array>
    <string name="load_cache">Disconnected mode</string>
</resources>